Fix: gallery images overflow & oversized [desktop]

--- a/styles/offers/create/overview.module.sass
+++ b/styles/offers/create/overview.module.sass
@@ -54,6 +54,8 @@
 .clickedImage
   width: auto
   height: auto
+  max-width: 1440px
+  max-height: calc(100vh - 140px)
 .creatorBannerWrapper
   padding: 32px
   width: 100%
